[gd_scene load_steps=3 format=3 uid="uid://dlc4ttb3bf168"]

[ext_resource type="Script" path="res://script/main/registr.gd" id="1_cg27n"]
[ext_resource type="Texture2D" uid="uid://cwyqeytggma5b" path="res://picture/3dfbdac2-11d8-48c2-83b4-fcc37f53d4ca.png" id="2_rytnx"]

[node name="Registr" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg27n")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = 620.0
offset_right = 201.0
offset_bottom = 652.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Все поля должны быть заполнены!"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="text join" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "Присоединяйтесь!"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -67

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="text syst" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Войдите в систему, чтобы получить доступ к приложению
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -87

[node name="FirstName" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
placeholder_text = "First Name*"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LastName" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
placeholder_text = "Last Name*"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Login" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer5"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
placeholder_text = "Login*"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="mail" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer6"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
placeholder_text = "Mail*"

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="pass" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer7"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
placeholder_text = "Password*"

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="pasw2" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer8"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
placeholder_text = "Password*"

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer9"]
layout_mode = 2
icon = ExtResource("2_rytnx")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="an acc" type="Button" parent="MarginContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "У вас уже есть аккаунт?
 Войдите здесь!"
flat = true

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer9/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/HBoxContainer/an acc" to="." method="_on_an_acc_pressed"]
